Photo size decreased and fixed the gaps

--- a/src/styles.css
+++ b/src/styles.css
@@ -304,16 +304,18 @@ button:focus,
 }
 
 #player-album-art {
-    width: 220px;
-    height: 220px;
+    width: 180px;
+    height: 180px;
     border-radius: 50%;
     overflow: hidden;
-    display: grid;
+    display: flex;
     place-items: center;
     background: radial-gradient(circle at center, rgba(0, 0, 0, 0.06) 10%, rgba(0, 0, 0, 0.02) 40%, transparent 60%);
     box-shadow: 0 10px 30px rgba(22, 24, 36, 0.12), inset 0 2px 6px rgba(255, 255, 255, 0.06);
     position: relative;
-    margin: 0 auto;
+    flex-shrink: 0;
+    background-color: var(--secondary-color);
+    margin: 0 10px;
     border: 8px solid rgba(20, 20, 20, 0.07);
 }
 
@@ -452,15 +454,16 @@ button:focus,
     }
 
     #player-album-art {
-        z-index: -100;
-        height: 280px;
+        z-index: 1;
+        height: 150px;
         box-shadow: none;
         background: #000;
+        margin: 10px auto;
     }
 
     #player-album-art img {
         width: 100%;
-        opacity: 0.6;
+        opacity: 1;
     }
 
     .player-display-song-artist {
